CIR-I5040 | action button alignment fixed in rfq

--- a/src/assests/scss/_rfq.scss
+++ b/src/assests/scss/_rfq.scss
@@ -83,3 +83,19 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.text-center {
+    .ag-cell-label-container {
+        .ag-header-cell-label {
+            justify-content: center;
+        }
+    }
+}
+
+.rfq-listing-action {
+    .ag-react-container {
+        text-align: right;
+        padding-right: 0 !important;
+        margin-right: -0.25rem !important;
+    }
+}
